--- a/index.html
+++ b/index.html
@@ -5,10 +5,239 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/02cdf8d490.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Football Worldcup</title>
 </head>
 
 <body>
+    <header class="banner">
+
+        <div class="bannerArticle">
+            <h1>The Greatest Show On The Earth</h1>
+            <p class="bannerP">
+                Your waiting is over. Fifa worldcup is back after four years.
+                seat tight and watch your favourite team to win. Dont miss this chance. keep eye on our website.
+                Your waiting is over. Fifa worldcup is back after four years.
+                seat tight and watch your favourite team to win. Dont miss this chance. keep eye on our website.
+
+            </p>
+            <p class="bannerButton">
+                watch live <span><i class="fa-solid fa-chevron-right"></i> </span>
+            </p>
+        </div>
+
+        <div class="headerimage">
+            <img src="./images/Banner Image.png" class="articleImg" alt="">
+            <img class="cup" src="./images/wc.png" alt="" />
+        </div>
+
+    </header>
+
+
+    <main>
+
+        <section class="main-section d-flex-row">
+
+
+            <div class="blognav">
+                <a class="blogrightnav" href="next.html">Upcoming match</a>
+                <a class="blogrightnav" href="">All group</a>
+                <a class="blogrightnavred" href="">Blog</a>
+            </div>
+
+
+            <div class="blogs">
+
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div class="blogdescription">
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="./images/Blog Image.png" alt="" />
+                    </div>
+
+                    <div>
+                        <button class="button">Transfer</button>
+                        <p class="blogparagraph">Transfer Live: Chelsea in talks over Kimpenbe transfer</p>
+                        <div>
+                            <span><img src="./images/Time Icon.png" alt=""> 10h</span>
+                            <span class="chatmargin"><img src="./images/Chat Icon.png" alt=""> 23</span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <div class="view-all d-flex-row">
+            <button class="button" id="view-all">View All</button>
+        </div>
+
+    </main>
+
+    <footer class="footer">
+
+        <h1>Goal</h1>
+        <hr>
+        <div class="footerlist">
+            <ul>
+                <li>Contact US</li>
+                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+                <li>Privacy Settings</li>
+                <li>Goal App</li>
+                <li>Goal Live</li>
+            </ul>
+        </div>
+
+        <div class="sociallink">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
+
 
 </body>
 
