--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <p class="bannerP">
                 Your waiting is over. Fifa worldcup is back after four years.
                 seat tight and watch your favourite team to win. Dont miss this chance. keep eye on our website.
-                Your waiting is over. Fifa worldcup is back after four years.
-                seat tight and watch your favourite team to win. Dont miss this chance. keep eye on our website.
+                Your waiting is over.
 
             </p>
             <p class="bannerButton">
